--- a/server/public/index.html
+++ b/server/public/index.html
@@ -104,7 +104,7 @@
                   <button type="submit" class="button is-large is-link">Smallify</button>
               </div>
           </form>
-          <h1 v-if="success" class="title is-2" style="text-align: center"><a :href="short">smallify.ly/{{short}}</a></h1>
+          <h1 v-if="success" class="title is-2" style="text-align: center"><a :href="short">{{domain}}{{short}}</a></h1>
       </main>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.3/vue.min.js" integrity="sha512-8hRfaOSHQEukFbj+zVTSjmqPL2SHIIKP+yZNdVoA6cXOG6vljJzQmEckVpKp65LDbjJLAZQkiRB/2dQcLBcnfA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
       <script src="main.js"></script>
